# prompt-firewall

./: .airflow.env  .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Makefile  README.md  cloudbuild.dashboard.yaml  cloudbuild.yaml  docker-compose.airflow.yml  docker-compose.yml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements-serve.txt  requirements-train.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  model_pipeline.yml  monitor.yml  retrain.yml
config/: app.yaml  monitoring.yaml  rules.yaml
dags/: firewall_pipeline_dag.py
data/bias/: bias_report_classifier.json
data/metrics/: .gitignore
deploy/: setup_gcp_deploy.sh
deploy/monitoring/: setup_uptime_check.sh
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.cloudrun  Dockerfile.dashboard  Dockerfile.dashboard.cloudrun  cloudrun-entrypoint.sh
documents/: bias_detection_mitigation.md
notebooks/: prompt_firewall_train_colab.ipynb
pipelines/: evaluate_firewall.py  ingest_dataset.py  train_classifier.py
schemas/: telemetry_event.json
scripts/: bias_detection.py  check_mlflow_artifacts.py  demo_firewall.py  ensure_pipeline_dirs.py  eval_regression_gate.py  fetch_model.py  fix_mlflow_artifact_paths.py  ge_runner.py  import_colab_zip.py  install_dev_deps.ps1  list_mlflow_runs.py  monitor_drift.py  preprocess_datasets.py  push_model_gcp.py  red_team_eval.py  run_api.ps1  setup_gcp_artifact_registry.ps1
src/dashboard/: app.py  style.css
src/firewall/: __init__.py  (+2 more)
tests/: test_regression_suite.py
(+53 files in other folders)
