[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-firewall-mlops"
version = "0.1.0"
description = "Prompt Firewall and Jailbreak Analytics for secure LLM chatbots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "prometheus-client>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "datasets>=2.18.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "mlflow>=2.11.0",
]
dashboard = ["streamlit>=1.32.0", "plotly>=5.20.0", "requests>=2.31.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]
mlops = ["dvc>=3.48.0", "great-expectations>=0.18.0", "apache-airflow>=2.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
